  * hover to invoke copy stack
  * while block (GCI - drakosvlad)
  * not block (GCI - Daksh Shah)
  * and block (GCI - Ignacio Rodriguez)
  * if-then-else block (GCI - Ignacio Rodriguez)
  * camera block for Firefox (GCI - Rafael Cordano)
  * video block for Firefox (GCI - Rafael Cordano)
  * speak block for Firefox (GCI - Rafael Cordano)
  * media blocks in Chrome
  * implement if-then-else, while, until
  * implement and or not
  * fixed problem with block resizing
  * drag palette items
  * query turtle blocks
  * confirm on clear
  * save dialog
  * palettes open by default
  * default start block position needs to move
  * copy stack copies instances instead of making new blocks?
  * enable number names for actions
  * enable number names for turtles
  * enable docking to any for boxes, equal
  * enable number names for boxes
  * fixed the problem with prototypes on the blocks palette
  * fixed highlighting of boolean blocks
  * global collapse stack button
  * smoother hand-off between palette and canvas when dragging blocks
  * work-around for number/string conversion error
  * adjust docks for vspace added outside of stacks
  * add mashape palette
  * translation blocks (w/Ignacio Rodriguez)
  * color forces max chroma; hue just sets hue.
  * preserve collapse state between save/load (w/Ignacio Rodriguez)
  * swipe to page samples viewer (w/Ignacio Rodriguez)
  * i18n (w/Ignacio Rodriguez)
  * mashape blocks (w/Ignacio Rodriguez and Sam Parkinson)
  * save/restore turtle state (w/Ignacio Rodriguez)

TODO:
  * rotate turtles with gesture
  * finish plugin mechanism
  * use busy cursor where approporate
  * use snap to pixels
  * user defined blocks
  * more sensors
  * RTL support
  * scroll instead of zoom?
  * use graphical error messages

BUGS:
  * jumpy scrolling
  * don't save full-sized bitmap to session
  * cannot open same file twice in a row (no change event?)
  * find out where number block values are being set to string